เชื่อม backend ไอดอ

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -902,6 +902,11 @@ footer {
 }
 
 @media (max-width: 564px) {
+
+    .product-item-con-text h3 {
+        font-size: 1rem;
+    }
+
     .search-con input {
         width: 270px;
     }
