--- a/components/loader.html
+++ b/components/loader.html
@@ -45,7 +45,7 @@
     <script>
         const fill = document.getElementById('fill');
 
-        const API = 'http://127.0.0.1:3000'
+        const API = 'https://sprightly-babka-889b49.netlify.app'
 
         const apis = [
             API + '/api/banners',
