--- a/components/search.html
+++ b/components/search.html
@@ -58,7 +58,7 @@
     </div>
 </body>
 <script>
-    const API = 'http://127.0.0.1:3000'
+    const API = 'https://sprightly-babka-889b49.netlify.app'
     async function searchProducts(query) {
         if (!query) return;
 
