--- a/components/loader.html
+++ b/components/loader.html
@@ -45,7 +45,7 @@
     <script>
         const fill = document.getElementById('fill');
 
-        const API = 'https://sprightly-babka-889b49.netlify.app'
+        const API = 'https://wed-u-design-backend-1.onrender.com'
 
         const apis = [
             API + '/api/banners',
