--- a/components/search.html
+++ b/components/search.html
@@ -58,7 +58,7 @@
     </div>
 </body>
 <script>
-    const API = 'https://sprightly-babka-889b49.netlify.app'
+    const API = 'https://wed-u-design-backend-1.onrender.com'
     async function searchProducts(query) {
         if (!query) return;
 
