--- a/assets/css/service_detail.css
+++ b/assets/css/service_detail.css
@@ -254,13 +254,14 @@ a {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     max-width: 1200px;
+    min-width: 1200px;
     scroll-margin-top: 110px;
-    /* ปรับลดลงจาก 130px */
+    
 }
 
 .service-images {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-bottom: 25px;
 }
@@ -295,7 +296,7 @@ a {
     font-size: 1.22rem;
     line-height: 1.8;
     color: black;
-
+    word-break: break-all;
     text-align: justify;
 }
 
