--- a/assets/css/service_detail.css
+++ b/assets/css/service_detail.css
@@ -216,7 +216,7 @@ a {
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
     text-decoration: none;
     display: inline-block;
     margin: 0 5px 8px 0;
@@ -227,7 +227,7 @@ a {
 .category-btn.active {
     background: #fff;
     color: #C5E642;
-    border: 2px solid #C5E642;
+    border: 1px solid #C5E642;
     font-weight: bold;
 }
 
@@ -267,7 +267,7 @@ a {
 
 .service-image {
     position: relative;
-    height: 200px;
+    height: 300px;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
@@ -276,7 +276,7 @@ a {
 .service-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: transform 0.3s ease;
 }
 
@@ -511,13 +511,41 @@ footer {
     }
 
     .category-nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-left: 0px;
-        top: 63px;
+        top: 40px;
+        padding-top: 30px;
     }
 
     .main-content .container {
         margin-left: 0;
+        
     }
+
+    .category-buttons {
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        overflow-x: auto;
+        flex-wrap: nowrap;
+        padding-bottom: 8px;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* IE 10+ */
+        justify-content: flex-start;
+        align-items: center;
+        scroll-behavior: smooth;
+        background: #fff;
+    }
+    .category-buttons::-webkit-scrollbar {
+        display: none;
+    }
+    .container{
+        margin: 0;
+        padding: 0;
+    }
+   
 }
 
 /* Responsive Design */
