--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -526,15 +526,15 @@ footer {
 
 .machine-image-1 {
   width: 100%;
-  max-width: 1100px;
-  height: 500px;
+  max-width: 900px;
+  height: 450px;
   margin: 0 auto;
 }
 
 .machine-image-1 img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 20px;
 }
 
