--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -654,8 +654,9 @@ footer {
   }
 
   .text-1 {
-    width: 20%;
+    width: 100%;
     display: flex;
+    text-align: center;
     word-wrap: break-word;
   }
 
