--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -78,7 +78,7 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
 }
 
 #particles {
@@ -390,13 +390,12 @@ header.visible {
 
 .hero-section {
     min-height: 100vh;
-    /* ให้สูงพอเพื่อเห็น sticky ทำงาน */
     display: block;
     text-align: center;
     position: relative;
     background: var(--gradient-primary);
     padding: 100px;
-    z-index: -1;
+    z-index: 1;
 }
 
 .hero-content {
@@ -443,7 +442,6 @@ header.visible {
     gap: 1.5rem;
     flex-wrap: wrap;
     top: -25px;
-
 }
 
 .btn-primary {
@@ -801,13 +799,13 @@ footer {
     color: var(--text-primary);
 }
 .particles {
-    position: fixed; /* ให้ลอยอยู่หลังสุด */
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 0; /* อยู่ข้างหลัง */
-    pointer-events: none; /* ไม่บังปุ่ม คลิกผ่านได้ */
+    z-index: 2; 
+    pointer-events: none;
 }
 @media (max-width: 1800px) {
 
